--- a/app/views/pages/planos.ejs
+++ b/app/views/pages/planos.ejs
@@ -178,7 +178,7 @@
               <% } %>
             <% } %>
           </ul>
-          <button onclick="contratarPlano('<%= plano.ID_PLANO %>', '<%= plano.NOME_PLANO %>', <%= plano.PRECO_PLANO %>)">Iniciar</button>
+          <%- plano.buttonHtml %>
         </section>
       <% }); %>
     <% } else { %>
@@ -237,14 +237,7 @@
     <p class="copyright">©2024 Vintélo. Todos os direitos reservados.</p>
   </footer>
   
-              <script>
-        window.isAuthenticated = <%= typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado ? 'true' : 'false' %>;
-        <% if (typeof autenticado !== 'undefined' && autenticado && autenticado.tipo) { %>
-        window.userType = '<%= autenticado.tipo %>';
-        <% } else if (typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado) { %>
-        window.userType = 'c';
-        <% } %>
-    </script>
+    <script src="/js/auth-config.js"></script>
     <script src="/js/navegacao.js"></script>
     <script src="/js/navegacao.js"></script>
   <script src="/js/planos.js"></script>
