--- a/app/views/pages/usuariosadm.ejs
+++ b/app/views/pages/usuariosadm.ejs
@@ -217,7 +217,7 @@
         <p class="copyright">©2024 Vintélo. Todos os direitos reservados.</p>
     </footer>
 
-    <script src="/js/verificar-codigo.js"></script>
+    <script src="/js/perfil-autenticado.js"></script>
     <script src="/js/navegacao.js"></script>
     <script>
         function goBack() {
