--- a/app/views/pages/perfilvender.ejs
+++ b/app/views/pages/perfilvender.ejs
@@ -265,14 +265,7 @@
         <p class="copyright">© 2024, Vintélo. Todos os direitos reservados.</p>
     </footer>
 
-    <script>
-        window.isAuthenticated = <%= typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado ? 'true' : 'false' %>;
-        <% if (typeof autenticado !== 'undefined' && autenticado && autenticado.tipo) { %>
-        window.userType = '<%= autenticado.tipo %>';
-        <% } else if (typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado) { %> 
-        window.userType = 'c';
-        <% } %>
-    </script>
+    <script src="/js/auth-config.js"></script>
     <script src="/js/navegacao.js"></script>
     <script src="/js/favoritos-global.js"></script>
     <script src="/js/carrinho-global.js"></script>
