--- a/app/views/pages/produtosadm.ejs
+++ b/app/views/pages/produtosadm.ejs
@@ -182,16 +182,10 @@
         <p class="copyright">©2024 Vintélo Admin. Todos os direitos reservados.</p>
     </footer>
 
-                <script>
-        window.isAuthenticated = <%= typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado ? 'true' : 'false' %>;
-        <% if (typeof autenticado !== 'undefined' && autenticado && autenticado.tipo) { %>
-        window.userType = '<%= autenticado.tipo %>';
-        <% } else if (typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado) { %>
-        window.userType = 'c';
-        <% } %>
-    </script>
+    <script src="/js/auth-config.js"></script>
+    <script src="/js/perfil-autenticado.js"></script>
     <script src="/js/navegacao.js"></script>
-    <script src="/js/navegacao.js"></script>
+    <script src="/js/produto-actions.js"></script>
     <script>
         function goBack() {
             window.history.back();
