atualização de script

--- a/app/views/pages/categorias.ejs
+++ b/app/views/pages/categorias.ejs
@@ -32,8 +32,8 @@
                 </form>
                 <ul>
                     <li><a href="/sacola1"><img src="imagens/icone saco.png" class="img-tamanho"></a></li>
-                    <li><a href="/cadastro"><img src="imagens/icone sem cadastro.png" class="maria"></a></li>
-                    <li><a href="/favoritos"><img src="imagens/icone coração.png" class="img-tamanho"></a></li>
+                    <li><a href="/perfilcliente"><img src="/imagens/icone sem cadastro.png" class="maria"></a></li>
+                    <li><a href="/favoritos"><img src="imagens/icone coraçao.png" class="img-tamanho"></a></li>
                 </ul>
             </section>
         </header>
@@ -47,8 +47,8 @@
                     <img src="imagens/seta.png" class="seta-voltar" alt="Voltar">
                 </a>
                 <img src="imagens/logo.png" alt="Logo" class="logo">
-                <a href="javascript:void(0)" onclick="goBack()">
-                    <img src="imagens/icone sem cadastro.png" alt="Perfil">
+                <a href="/perfilcliente">
+                    <img src="/imagens/icone sem cadastro.png" class="maria" alt="Perfil">
                 </a>
             </nav>
         </header>
