--- a/app/public/css/categorias.css
+++ b/app/public/css/categorias.css
@@ -66,6 +66,13 @@ body {
   transition: transform 0.3s ease;
 }
 
+.search-profile .maria {
+  border-radius: 50%;
+  object-fit: cover;
+  width: 45px;
+  height: 45px;
+}
+
 .search-profile img:hover {
   transform: scale(1.1);
 }
@@ -86,6 +93,13 @@ nav.grid {
 nav.grid img {
   height: 50px;
   width: auto;
+}
+
+nav.grid .maria {
+  border-radius: 50%;
+  object-fit: cover;
+  width: 50px;
+  height: 50px;
 }
 
 .seta-voltar {
