--- a/app/views/pages/planos.ejs
+++ b/app/views/pages/planos.ejs
@@ -102,7 +102,7 @@
                 </form>
                 <ul>
                     <li><a href="#" ></a><img src="imagens/icone saco.png" class="img-tamanho"> </li>
-                    <li><a href="/menuvendedor" ><img src="imagens/imagem sem cadastro.avif" class="img-tamanho"></a></li>
+                    <li><a href="/menuvendedor" ><img src="/imagens/icone sem cadastro.png" class="maria"></a></li>
                     <li><a href="#" ><img src="imagens/icone coraçao.png" class="img-tamanho"> </a></li>
                 </ul>
             </section>
@@ -237,10 +237,9 @@
     <p class="copyright">©2024 Vintélo. Todos os direitos reservados.</p>
   </footer>
   
-    <script src="/js/auth-config.js"></script>
+    <script src="/js/perfil-autenticado.js"></script>
     <script src="/js/navegacao.js"></script>
-    <script src="/js/navegacao.js"></script>
-  <script src="/js/planos.js"></script>
+    <script src="/js/planos.js"></script>
     <script>
         function goBack() {
             window.history.back();
