--- a/app/views/pages/avaliacoes-brecho.ejs
+++ b/app/views/pages/avaliacoes-brecho.ejs
@@ -77,7 +77,7 @@
                 </div>
                 <% }); %>
             <% } else { %>
-                <p class="no-reviews">Ainda não há avaliações para este brechó.</p>
+                <p class="no-reviews">Ainda não há avaliações para este brechó</p>
             <% } %>
         </section>
     </main>
