--- a/app/views/pages/minhascompras.ejs
+++ b/app/views/pages/minhascompras.ejs
@@ -30,7 +30,7 @@
             <input type="text" placeholder="Buscar...">
           </form>
           <ul>
-            <li><a href="/perfilcliente"><img src="imagens/icone sem cadastro.png" class="img-tamanho"></a></li>
+            <li><a href="/perfilcliente"><img src="imagens/icone sem cadastro.png" class="img-tamanho user-profile-img"></a></li>
             <li><a href="/criarbrecho"><img src="imagens/add brecho.png" class="img-tamanho"></a></li>
             <li><a href="/favoritos"><img src="imagens/icone coraçao.png" class="img-tamanho"></a></li>
           </ul>
