--- a/app/views/pages/pagamentoFalha.ejs
+++ b/app/views/pages/pagamentoFalha.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vintélo - Pagamento Recusado</title>
-  <link rel="stylesheet" href="/css/pedidoconf.css">
+  <link rel="stylesheet" href="/css/pagamento-status.css">
   <link rel="icon" href="/imagens/brilhoescuro.png" type="image/x-icon">
 </head>
 <body>
@@ -105,7 +105,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-      <img src="/imagens/logo2.jpeg" alt="Vintélo" class="footer-image">
+      <img src="/imagens/logo.png" alt="Vintélo" class="footer-image">
       <section class="social-media">
         <p class="p-footer">Siga nossas redes sociais</p>
         <ul class="social-links">
