--- a/app/views/pages/pagamentoSucesso.ejs
+++ b/app/views/pages/pagamentoSucesso.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vintélo - Pagamento Aprovado</title>
-  <link rel="stylesheet" href="/css/pedidoconf.css">
+  <link rel="stylesheet" href="/css/pagamento-status.css">
   <link rel="icon" href="/imagens/brilhoescuro.png" type="image/x-icon">
 </head>
 <body>
@@ -29,7 +29,7 @@
     </header>
 
     <main>
-      <section class="status-container">
+      <section class="status-container success">
         <img src="/imagens/check.png" alt="Sucesso" class="status-icon">
         <h2>Pagamento Aprovado!</h2>
         <p>Seu pagamento foi processado com sucesso.</p>
@@ -85,7 +85,7 @@
       </section>
     </header>
 
-    <section class="status-container-desktop">
+    <section class="status-container-desktop success">
       <img src="/imagens/check.png" alt="Sucesso" class="status-icon-desktop">
       <h1>Pagamento Aprovado!</h1>
       <p>Seu pagamento foi processado com sucesso.</p>
@@ -105,7 +105,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-      <img src="/imagens/logo2.jpeg" alt="Vintélo" class="footer-image">
+      <img src="/imagens/logo.png" alt="Vintélo" class="footer-image">
       <section class="social-media">
         <p class="p-footer">Siga nossas redes sociais</p>
         <ul class="social-links">
