--- a/app/views/pages/pagamentoPendente.ejs
+++ b/app/views/pages/pagamentoPendente.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vintélo - Pagamento Pendente</title>
-  <link rel="stylesheet" href="/css/pedidoconf.css">
+  <link rel="stylesheet" href="/css/pagamento-status.css">
   <link rel="icon" href="/imagens/brilhoescuro.png" type="image/x-icon">
 </head>
 <body>
@@ -15,13 +15,13 @@
         <a href="javascript:void(0)" onclick="goBack()">
           <img src="/imagens/seta.png" alt="Voltar">
         </a>
-        <h1>Pagamento Pendente</h1>
+        <img src="/imagens/logo.png" alt="Logo">
         <% if (autenticado && autenticado.imagem) { %>
-          <a href="javascript:void(0)" onclick="goBack()">
+          <a href="/perfilcliente">
             <img src="/<%= autenticado.imagem %>" alt="Perfil" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover;">
           </a>
         <% } else { %>
-          <a href="javascript:void(0)" onclick="goBack()">
+          <a href="/perfilcliente">
             <img src="/imagens/icone sem cadastro.png" alt="Perfil" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover;">
           </a>
         <% } %>
@@ -42,8 +42,8 @@
         <p>Você receberá uma confirmação em breve por e-mail.</p>
         
         <section class="actions">
-          <a href="javascript:void(0)" onclick="goBack()" class="btn-primary">Acompanhar Pedido</a>
-          <a href="javascript:void(0)" onclick="goBack()" class="btn-secondary">Continuar Comprando</a>
+          <a href="/minhascompras" class="btn-primary">Acompanhar Pedido</a>
+          <a href="/homecomprador" class="btn-secondary">Continuar Comprando</a>
         </section>
       </section>
     </main>
@@ -105,7 +105,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-      <img src="/imagens/logo2.jpeg" alt="Vintélo" class="footer-image">
+      <img src="/imagens/logo.png" alt="Vintélo" class="footer-image">
       <section class="social-media">
         <p class="p-footer">Siga nossas redes sociais</p>
         <ul class="social-links">
